hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__array__test__emit_all_ops@llvm21.snap
---
source: hugr-llvm/src/extension/collections/array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@3 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.3 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@4 = private unnamed_addr constant [37 x i8] c"Expected variant 1 but got variant 0\00", align 1
@prelude.panic_template.4 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !6
  %1 = call ptr @malloc(i64 %0), !dbg !6
  %2 = insertvalue { ptr, i64 } poison, ptr %1, 0, !dbg !6
  %3 = insertvalue { ptr, i64 } %2, i64 0, 1, !dbg !6
  %4 = getelementptr inbounds i64, ptr %1, i64 0, !dbg !6
  store i64 1, ptr %4, align 4, !dbg !6
  %5 = getelementptr inbounds i64, ptr %1, i64 1, !dbg !6
  store i64 2, ptr %5, align 4, !dbg !6
  %6 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !7
  %7 = call ptr @malloc(i64 %6), !dbg !7
  %8 = insertvalue { ptr, i64 } poison, ptr %7, 0, !dbg !7
  %9 = insertvalue { ptr, i64 } %8, i64 0, 1, !dbg !7
  %10 = getelementptr inbounds i64, ptr %7, i64 0, !dbg !7
  store i64 1, ptr %10, align 4, !dbg !7
  %11 = getelementptr inbounds i64, ptr %7, i64 1, !dbg !7
  store i64 2, ptr %11, align 4, !dbg !7
  %array_ptr = extractvalue { ptr, i64 } %9, 0, !dbg !8
  %array_offset = extractvalue { ptr, i64 } %9, 1, !dbg !8
  %12 = add i64 %array_offset, 0, !dbg !8
  %13 = getelementptr inbounds i64, ptr %array_ptr, i64 %12, !dbg !8
  %14 = load i64, ptr %13, align 4, !dbg !8
  %15 = add i64 %array_offset, 1, !dbg !8
  %16 = getelementptr inbounds i64, ptr %array_ptr, i64 %15, !dbg !8
  %17 = load i64, ptr %16, align 4, !dbg !8
  %array_ptr9 = extractvalue { ptr, i64 } %3, 0, !dbg !9
  %array_offset10 = extractvalue { ptr, i64 } %3, 1, !dbg !9
  %18 = icmp ult i64 0, 2, !dbg !9
  %19 = icmp ult i64 1, 2, !dbg !9
  %20 = and i1 %18, %19, !dbg !9
  br i1 %20, label %23, label %21, !dbg !9

21:                                               ; preds = %entry_block
  %22 = insertvalue { i1, { ptr, i64 } } { i1 false, { ptr, i64 } poison }, { ptr, i64 } %3, 1, !dbg !9
  br label %31, !dbg !9

23:                                               ; preds = %entry_block
  %24 = add i64 0, %array_offset10, !dbg !9
  %25 = add i64 1, %array_offset10, !dbg !9
  %26 = getelementptr inbounds i64, ptr %array_ptr9, i64 %24, !dbg !9
  %27 = load i64, ptr %26, align 4, !dbg !9
  %28 = getelementptr inbounds i64, ptr %array_ptr9, i64 %25, !dbg !9
  %29 = load i64, ptr %28, align 4, !dbg !9
  store i64 %29, ptr %26, align 4, !dbg !9
  store i64 %27, ptr %28, align 4, !dbg !9
  %30 = insertvalue { i1, { ptr, i64 } } { i1 true, { ptr, i64 } poison }, { ptr, i64 } %3, 1, !dbg !9
  br label %31, !dbg !9

31:                                               ; preds = %21, %23
  %"0.0" = phi { i1, { ptr, i64 } } [ %30, %23 ], [ %22, %21 ], !dbg !9
  %32 = extractvalue { i1, { ptr, i64 } } %"0.0", 0
  switch i1 %32, label %33 [
    i1 true, label %35
  ]

33:                                               ; preds = %31
  %34 = extractvalue { i1, { ptr, i64 } } %"0.0", 1
  br label %cond_19_case_0

35:                                               ; preds = %31
  %36 = extractvalue { i1, { ptr, i64 } } %"0.0", 1
  br label %cond_19_case_1

cond_19_case_0:                                   ; preds = %33
  %37 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 0, !dbg !10
  %38 = extractvalue { i32, ptr } { i32 1, ptr @0 }, 1, !dbg !10
  %39 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 %37, ptr %38), !dbg !10
  call void @abort(), !dbg !10
  br label %cond_exit_19

cond_19_case_1:                                   ; preds = %35
  br label %cond_exit_19

cond_exit_19:                                     ; preds = %cond_19_case_1, %cond_19_case_0
  %"013.0" = phi { ptr, i64 } [ zeroinitializer, %cond_19_case_0 ], [ %36, %cond_19_case_1 ]
  %array_ptr25 = extractvalue { ptr, i64 } %"013.0", 0, !dbg !11
  %array_offset26 = extractvalue { ptr, i64 } %"013.0", 1, !dbg !11
  %40 = icmp ult i64 0, 2, !dbg !11
  br i1 %40, label %42, label %41, !dbg !11

41:                                               ; preds = %cond_exit_19
  br label %47, !dbg !11

42:                                               ; preds = %cond_exit_19
  %43 = add i64 0, %array_offset26, !dbg !11
  %44 = getelementptr inbounds i64, ptr %array_ptr25, i64 %43, !dbg !11
  %45 = load i64, ptr %44, align 4, !dbg !11
  %46 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %45, 1, !dbg !11
  br label %47, !dbg !11

47:                                               ; preds = %41, %42
  %"027.0" = phi { i1, i64 } [ %46, %42 ], [ { i1 false, i64 poison }, %41 ], !dbg !11
  %48 = extractvalue { i1, i64 } %"027.0", 0
  switch i1 %48, label %49 [
    i1 true, label %50
  ]

49:                                               ; preds = %47
  br label %cond_31_case_0

50:                                               ; preds = %47
  %51 = extractvalue { i1, i64 } %"027.0", 1
  br label %cond_31_case_1

cond_31_case_0:                                   ; preds = %49
  %52 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 0, !dbg !12
  %53 = extractvalue { i32, ptr } { i32 1, ptr @1 }, 1, !dbg !12
  %54 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 %52, ptr %53), !dbg !12
  call void @abort(), !dbg !12
  br label %cond_exit_31

cond_31_case_1:                                   ; preds = %50
  br label %cond_exit_31

cond_exit_31:                                     ; preds = %cond_31_case_1, %cond_31_case_0
  %"031.0" = phi i64 [ 0, %cond_31_case_0 ], [ %51, %cond_31_case_1 ]
  %array_ptr41 = extractvalue { ptr, i64 } %"013.0", 0, !dbg !13
  %array_offset42 = extractvalue { ptr, i64 } %"013.0", 1, !dbg !13
  %55 = icmp ult i64 1, 2, !dbg !13
  br i1 %55, label %59, label %56, !dbg !13

56:                                               ; preds = %cond_exit_31
  %57 = insertvalue { i1, { ptr, i64 }, i64 } { i1 false, { ptr, i64 } poison, i64 poison }, i64 %"031.0", 2, !dbg !13
  %58 = insertvalue { i1, { ptr, i64 }, i64 } %57, { ptr, i64 } %"013.0", 1, !dbg !13
  br label %65, !dbg !13

59:                                               ; preds = %cond_exit_31
  %60 = add i64 1, %array_offset42, !dbg !13
  %61 = getelementptr inbounds i64, ptr %array_ptr41, i64 %60, !dbg !13
  %62 = load i64, ptr %61, align 4, !dbg !13
  store i64 %"031.0", ptr %61, align 4, !dbg !13
  %63 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %62, 2, !dbg !13
  %64 = insertvalue { i1, { ptr, i64 }, i64 } %63, { ptr, i64 } %"013.0", 1, !dbg !13
  br label %65, !dbg !13

65:                                               ; preds = %56, %59
  %"043.0" = phi { i1, { ptr, i64 }, i64 } [ %64, %59 ], [ %58, %56 ], !dbg !13
  %66 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 0
  switch i1 %66, label %67 [
    i1 true, label %70
  ]

67:                                               ; preds = %65
  %68 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 2
  %69 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 1
  br label %cond_42_case_0

70:                                               ; preds = %65
  %71 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 2
  %72 = extractvalue { i1, { ptr, i64 }, i64 } %"043.0", 1
  br label %cond_42_case_1

cond_42_case_0:                                   ; preds = %67
  %73 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 0, !dbg !14
  %74 = extractvalue { i32, ptr } { i32 1, ptr @2 }, 1, !dbg !14
  %75 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 %73, ptr %74), !dbg !14
  call void @abort(), !dbg !14
  br label %cond_exit_42

cond_42_case_1:                                   ; preds = %70
  br label %cond_exit_42

cond_exit_42:                                     ; preds = %cond_42_case_1, %cond_42_case_0
  %"046.0" = phi i64 [ 0, %cond_42_case_0 ], [ %71, %cond_42_case_1 ]
  %"147.0" = phi { ptr, i64 } [ zeroinitializer, %cond_42_case_0 ], [ %72, %cond_42_case_1 ]
  %array_ptr66 = extractvalue { ptr, i64 } %"147.0", 0, !dbg !15
  %array_offset67 = extractvalue { ptr, i64 } %"147.0", 1, !dbg !15
  %new_offset = add i64 %array_offset67, 1, !dbg !15
  %76 = getelementptr inbounds ptr, ptr %array_ptr66, i64 %array_offset67, !dbg !15
  %77 = load i64, ptr %76, align 4, !dbg !15
  %78 = insertvalue { ptr, i64 } poison, ptr %array_ptr66, 0, !dbg !15
  %79 = insertvalue { ptr, i64 } %78, i64 %new_offset, 1, !dbg !15
  %80 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %77, 2, !dbg !15
  %81 = insertvalue { i1, { ptr, i64 }, i64 } %80, { ptr, i64 } %79, 1, !dbg !15
  %82 = extractvalue { i1, { ptr, i64 }, i64 } %81, 0
  switch i1 %82, label %83 [
    i1 true, label %84
  ]

83:                                               ; preds = %cond_exit_42
  br label %cond_53_case_0

84:                                               ; preds = %cond_exit_42
  %85 = extractvalue { i1, { ptr, i64 }, i64 } %81, 2
  %86 = extractvalue { i1, { ptr, i64 }, i64 } %81, 1
  br label %cond_53_case_1

cond_53_case_0:                                   ; preds = %83
  %87 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 0, !dbg !16
  %88 = extractvalue { i32, ptr } { i32 1, ptr @3 }, 1, !dbg !16
  %89 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.3, i32 %87, ptr %88), !dbg !16
  call void @abort(), !dbg !16
  br label %cond_exit_53

cond_53_case_1:                                   ; preds = %84
  br label %cond_exit_53

cond_exit_53:                                     ; preds = %cond_53_case_1, %cond_53_case_0
  %"069.0" = phi i64 [ 0, %cond_53_case_0 ], [ %85, %cond_53_case_1 ]
  %"170.0" = phi { ptr, i64 } [ zeroinitializer, %cond_53_case_0 ], [ %86, %cond_53_case_1 ]
  %array_ptr83 = extractvalue { ptr, i64 } %"170.0", 0, !dbg !17
  %array_offset84 = extractvalue { ptr, i64 } %"170.0", 1, !dbg !17
  %90 = add i64 %array_offset84, 0, !dbg !17
  %91 = getelementptr inbounds ptr, ptr %array_ptr83, i64 %90, !dbg !17
  %92 = load i64, ptr %91, align 4, !dbg !17
  %93 = insertvalue { ptr, i64 } poison, ptr %array_ptr83, 0, !dbg !17
  %94 = insertvalue { ptr, i64 } %93, i64 %array_offset84, 1, !dbg !17
  %95 = insertvalue { i1, { ptr, i64 }, i64 } { i1 true, { ptr, i64 } poison, i64 poison }, i64 %92, 2, !dbg !17
  %96 = insertvalue { i1, { ptr, i64 }, i64 } %95, { ptr, i64 } %94, 1, !dbg !17
  %97 = extractvalue { i1, { ptr, i64 }, i64 } %96, 0
  switch i1 %97, label %98 [
    i1 true, label %99
  ]

98:                                               ; preds = %cond_exit_53
  br label %cond_64_case_0

99:                                               ; preds = %cond_exit_53
  %100 = extractvalue { i1, { ptr, i64 }, i64 } %96, 2
  %101 = extractvalue { i1, { ptr, i64 }, i64 } %96, 1
  br label %cond_64_case_1

cond_64_case_0:                                   ; preds = %98
  %102 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 0, !dbg !18
  %103 = extractvalue { i32, ptr } { i32 1, ptr @4 }, 1, !dbg !18
  %104 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.4, i32 %102, ptr %103), !dbg !18
  call void @abort(), !dbg !18
  br label %cond_exit_64

cond_64_case_1:                                   ; preds = %99
  br label %cond_exit_64

cond_exit_64:                                     ; preds = %cond_64_case_1, %cond_64_case_0
  %"086.0" = phi i64 [ 0, %cond_64_case_0 ], [ %100, %cond_64_case_1 ]
  %"187.0" = phi { ptr, i64 } [ zeroinitializer, %cond_64_case_0 ], [ %101, %cond_64_case_1 ]
  %array_ptr100 = extractvalue { ptr, i64 } %"187.0", 0, !dbg !19
  %array_offset101 = extractvalue { ptr, i64 } %"187.0", 1, !dbg !19
  call void @free(ptr %array_ptr100), !dbg !19
  ret void
}

declare ptr @malloc(i64)

declare i32 @printf(ptr, ...)

declare void @abort()

declare void @free(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/iWSKICg/uRNRvRJmbrfVqoq.gpy.py", directory: "")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !2, line: 25090, type: !4, scopeLine: 25091, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{null}
!6 = !DILocation(line: 1644, column: 171, scope: !3)
!7 = !DILocation(line: 16024, column: 485, scope: !3)
!8 = !DILocation(line: 9757, column: 105, scope: !3)
!9 = !DILocation(line: 18148, column: 188, scope: !3)
!10 = !DILocation(line: 4122, column: 47, scope: !3)
!11 = !DILocation(line: 25736, column: 110, scope: !3)
!12 = !DILocation(line: 21009, column: 70, scope: !3)
!13 = !DILocation(line: 26616, column: 125, scope: !3)
!14 = !DILocation(line: 16261, column: 17, scope: !3)
!15 = !DILocation(line: 9829, column: 395, scope: !3)
!16 = !DILocation(line: 25937, column: 483, scope: !3)
!17 = !DILocation(line: 1858, column: 218, scope: !3)
!18 = !DILocation(line: 24181, column: 323, scope: !3)
!19 = !DILocation(line: 9155, column: 38, scope: !3)
